--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </a>
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
-                    <a href="addPurchase.html" class="nav-link">
+                    <a href="add-purchase.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Add Purchaser</p>
                     </a>
@@ -284,7 +284,7 @@
                 </a>
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
-                    <a href="addPurchase.html" class="nav-link">
+                    <a href="add-damage.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Add Damage</p>
                     </a>
@@ -315,7 +315,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="managePurchase.html" class="nav-link">
+                    <a href="manageProducts.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Manage Products</p>
                     </a>
@@ -339,7 +339,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="managePurchase.html" class="nav-link">
+                    <a href="manageCategory.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Manage Category</p>
                     </a>
@@ -363,7 +363,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="managePurchase.html" class="nav-link">
+                    <a href="manageBrand.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Manage Brands</p>
                     </a>
